[package]
name = "filterer"
version = "0.1.0"
authors = ["misonomi <misonomi0612+github@gmail.com>"]
edition = "2018"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]

[dependencies]
rocket = {github = "https://github.com/SergioBenitez/Rocket"}
egg-mode = {github = "https://github.com/QuietMisdreavus/twitter-rs"}
tokio = "0.1.21"
serde = { version = "1.0.101", features = ["derive"] }

yansi = "0.5.0"
chrono = "0.4"